@@ -65,6 +65,8 @@ my $builder = $class->new(
           'npg_qc::autoqc::qc_store'                           => 0,
           'npg_tracking::data::reference::find'                => 0,
           'npg_tracking::data::reference::list'                => 0,
+          'npg_tracking::data::bait'                           => 0,
+          'npg_tracking::data::transcriptome'                  => 0,
           'npg_tracking::daemon'                               => 0,
           'npg_tracking::glossary::run'                        => 0,
           'npg_tracking::illumina::run::folder'                => 0,
